# coffee

./: .gitignore  .gitmodules  .travis.yml  00CORE_2README_8md.html  00CORE_8c.html  00CORE_8c.js  00CORE_8h.html  00CORE_8h.js  00CORE_8h_source.html  AOsystSim_2README_8md.html  AOsystSim_8c.html  AOsystSim_8c.js  AOsystSim_8h.html  AOsystSim_8h_source.html  CHANGELOG_8md.html  CLI__Overview_8md.html  CLIcore_8c.html  CLIcore_8c.js  CLIcore_8h.html  CLIcore_8h_source.html  CLIcore_8md.html  CLImain_8c.html  CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE__OF__CONDUCT_8md.html  COREMOD__arith_2README_8md.html  COREMOD__arith_8c.html  COREMOD__arith_8c.js  COREMOD__arith_8h.html  COREMOD__arith_8h_source.html  COREMOD__iofits_2README_8md.html  COREMOD__iofits_8c.html  COREMOD__iofits_8c.js  COREMOD__iofits_8h.html  COREMOD__iofits_8h_source.html  COREMOD__memory_2README_8md.html  COREMOD__memory_8c.html  COREMOD__memory_8c.js  (+665 more)
doc/: .sourcecode_conventions.md.swp  coffee_Modules.md
html/: 00CORE_2README_8md.html  00CORE_8c.html  00CORE_8c.js  00CORE_8h.html  00CORE_8h_source.html  AOsystSim_2README_8md.html  AOsystSim_8c.html  AOsystSim_8c.js  AOsystSim_8h.html  AOsystSim_8h_source.html  CLI__Overview_8md.html  CLIcore_8c.html  CLIcore_8c.js  CLIcore_8h.html  CLIcore_8h_source.html  CLIcore_8md.html  CLImain_8c.html  CODE__OF__CONDUCT_8md.html  COREMOD__arith_2LICENSE_8md_2README_8md.html  COREMOD__arith_2README_8md.html  COREMOD__arith_8c.html  COREMOD__arith_8c.js  COREMOD__arith_8h.html  COREMOD__arith_8h_source.html  COREMOD__iofits_2README_8md.html  COREMOD__iofits_8c.html  COREMOD__iofits_8c.js  COREMOD__iofits_8h.html  COREMOD__iofits_8h_source.html  COREMOD__memory_2README_8md.html  COREMOD__memory_8c.html  COREMOD__memory_8c.js  COREMOD__memory_8h.html  COREMOD__memory_8h_source.html  COREMOD__tools_2README_8md.html  COREMOD__tools_8c.html  COREMOD__tools_8c.js  COREMOD__tools_8h.html  COREMOD__tools_8h_source.html  CommandLineInterface_2README_8md.html  (+535 more)
html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_c.js  files_11.js  files_2.js  files_4.js  files_b.js  files_c.js  files_d.js  functions_0.js  functions_1.js  functions_10.js  functions_17.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  (+34 more)
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_c.js  files_1.js  files_11.js  files_2.js  files_4.js  files_b.js  files_c.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_15.js  functions_17.js  functions_3.js  functions_5.js  functions_6.js  (+33 more)
src/: CLImain.c  Makefile.am
